      with the package version
  * debian/watch
    - point Homepage to the salsa repo
  * debian/control
    - depends on python3-debian >= 0.1.45, fixes a bug that creates an extra
      empty line at the end of d/changelog, upsetting lintian; Closes: #1015238
  * feat(control.tpl): run autopkgtest via autopkgtest-pkg-pybuild;
    Closes: #1015927
  
  [ Nicolas Dandrimont ]
  * pypi: use the urls key to find download URLs; Closes: #1015888

  [ Agathe Porte ]
  * github: remove trailing `/` in repo url
  * github: add some logs while performing operations
  * control.tpl: remove python3 Recommends/Suggests
  * github: fix wrong tag download URL
  * dpt: unittests: use py3versions -s (instead of -r)
  * profiles: introduce dpt-maint, where DPT is set to Maintainer
  * use async/await keywords instead of yield from; Closes: #1029749

 -- Sandro Tosi <morph@debian.org>  Sat, 18 Feb 2023 19:41:24 -0500

pypi2deb (3.20220721) unstable; urgency=medium

  [ Agathe Porte ]
  * github: use last tag if no release found

  [ Sandro Tosi ]
  * template: bump Standards-Version to 4.6.1.0

 -- Sandro Tosi <morph@debian.org>  Thu, 21 Jul 2022 14:10:30 -0400

pypi2deb (3.20220707) unstable; urgency=medium

  [ Piotr Ożarowski ]
  * Add Sandro Tosi to co-maintainers
  * Update VCS-* fields to point to Salsa

  [ Sandro Tosi ]
  * template: set Standards-Version to 4.5.0
  * template: set dh compat to 13, via debhelper-compat b-d; Closes: #966104
  * profiles: PAPT and DPMT converged into DPT, so update the profiles
    accordingly
  * Remove support for python2; Closes: #966103
  * When using a local tarball, copy it in the destination directory
  * template: set Standards-Version to 4.5.1
  * template: bump d/watch version to 4
  * recognize both 'Apache 2' and 'Apache 2.0'
  * hook: tag upstream version after import, as done by gbp import-orig
  * py2dsp: remove spurious debian/files, left behind dpkg-buildpackage due to
    #845436