@@ -11,6 +11,7 @@ pypi2deb (3.20220722) UNRELEASED; urgency=medium
       empty line at the end of d/changelog, upsetting lintian; Closes: #1015238
   * feat(control.tpl): run autopkgtest via autopkgtest-pkg-pybuild;
     Closes: #1015927
+  * feat: add support for pyproject.toml; Closes: #1015237
   
   [ Nicolas Dandrimont ]
   * pypi: use the urls key to find download URLs; Closes: #1015888
@@ -24,7 +25,7 @@ pypi2deb (3.20220722) UNRELEASED; urgency=medium
   * profiles: introduce dpt-maint, where DPT is set to Maintainer
   * use async/await keywords instead of yield from; Closes: #1029749
 
- -- Sandro Tosi <morph@debian.org>  Sat, 18 Feb 2023 19:41:24 -0500
+ -- Sandro Tosi <morph@debian.org>  Sun, 19 Feb 2023 01:26:31 -0500
 
 pypi2deb (3.20220721) unstable; urgency=medium
 
